final commit ssep 5 24

--- a/index.html
+++ b/index.html
@@ -83,20 +83,10 @@
           </p>
           <div class="social__list">
             <a
-              href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwiznrvx-4uEAxUTsFYBHTNSDaQQPAgJ"
+              href="https://github.com/LetitiaCowan"
               target="_blank"
               class="social__link click"
             >
-              <i class="fa-brands fa-github"></i>
-            </a>
-            <a
-              href="/assets/David Bragg Resume.pdf"
-              target="_blank"
-              class="social__link click"
-            >
-              <i class="fa-solid fa-file-pdf"></i>
-            </a>
-            <a href="" class="social__link click">
               <i class="fa-brands fa-github"></i>
             </a>
           </div>
