--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     Html, CSS, JavaScript, React
                   </h4>
                   <p class="projects__description--para">
-                    In this project, I wanted to challange myself and create a E-commerce website. I did this predominantly using React which helped to seamlessly blend in my HTML, CSS and JavaScript. through this project, I gained confidence in accessing and rendering APIs onto sites for a smooth and user friendly finish.
+                    In this project, I wanted to challange myself and create a E-commerce website. I did this predominantly using React which helped to seamlessly blend in my HTML, CSS and JavaScript. Through this project, I gained confidence in accessing and rendering APIs onto sites for a smooth and user friendly finish.
                   </p>
                   <div class="project__description--links">
                     <a href="https://github.com/LetitiaCowan/React-E-Com" target="_blank" class="project__description--link">
@@ -248,7 +248,7 @@
                     Html, CSS, JavaScript
                   </h4>
                   <p class="projects__description--para">
-                    This was one of the first projects where I used JavaScript to hit a API and use the data gathered to render what the user desired. This was a fun challange as I wanted to give it a go using only vanilla JavaScript.
+                    This was one of the first projects where I used JavaScript to hit a API and use the data gathered to render what the user desired via search. This was a fun challange as I wanted to give it a go using only vanilla JavaScript. The main focus for this particular project was to test the funcionality I was able to create from what base knowledge I had at the time.
                   </p>
                   <div class="project__description--links">
                     <a href="https://github.com/LetitiaCowan/Wk-4-Final-Project" target="_blank" class="project__description--link">
