--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
             <br />
             I currently solve difficult engineering problems every day
             using <b class="orange">HTML</b>,
-            <b class="orange">CSS</b> and <b class="orange">JavaScript</b> in
-            Canva's Video team.
+            <b class="orange">CSS</b> and <b class="orange">JavaScript</b> and <b class="orange">React</b>.
           </p>
 
           <div class="modal__lang--container">
