--- a/index.html
+++ b/index.html
@@ -302,32 +302,18 @@
           <ul class="footer__social--lists center">
             <li class="footer__social--list">
               <a
-                href="#"
+                href="https://github.com/LetitiaCowan"
                 class="footer__social--link link__hover-effect--white link__hover-effect"
                 >GitHub</a
               >
             </li>
               
-              <li class="footer__social--list" onclick="toggleModal()" >
-              <a
-                href="#"
-                class="footer__social--link link__hover-effect--white link__hover-effect"
-                >LinkedIn</a
-              >
-            </li>
             <li class="footer__social--list">
               <a
                 onclick="toggleModal()"
                 href="#"
                 class="footer__social--link link__hover-effect--white link__hover-effect"
                 >Contact</a
-              >
-            </li>
-            <li class="footer__social--list">
-              <a
-                href="#"
-                class="footer__social--link link__hover-effect--white link__hover-effect"
-                >Resume</a
               >
             </li>
           </ul>
